Minor correction to the spacing of the first child section of the portfolioContainer

--- a/css/styles.css
+++ b/css/styles.css
@@ -888,7 +888,7 @@ img {
   }
 
   .portfolioContain .section:first-child{
-    padding: 125px 0px 0px;
+    padding: 125px 0px;
   }
 
   .rightImgLrg{
